src/objects/SomDig_Metabuchungslogik__c.object
<CustomObject>
    <description>Die Metabuchungslogik (MBL) dient als Regelwerk bei der Erstellung von Werbemitteln/Preisen für die Produktmatrix von ADvendio.</description>
    <fields>
        <fullName>Mig_ProdiaKey__c</fullName>
        <description>Eindeutiger Schlüssel aus ProDia, der für den Abgleich bei der Migration benötigt wird.</description>
        <externalId>true</externalId>
        <inlineHelpText>Eindeutiger Schlüssel aus ProDia, der für den Abgleich bei der Migration benötigt wird.</inlineHelpText>
        <label>ProDia Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>P7S1_IdOld__c</fullName>
        <description>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</description>
        <inlineHelpText>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</inlineHelpText>
        <label>P7S1_IdOld</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SomDig_Abrechnungsart__c</fullName>
        <label>Abrechnungsart</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Festpreis</fullName>
                </value>
                <value>
                    <fullName>CPC</fullName>
                </value>
                <value>
                    <fullName>CPD</fullName>
                </value>
                <value>
                    <fullName>CPM</fullName>
                </value>
                <value>
                    <fullName>CPO</fullName>
                </value>
                <value>
                    <fullName>CPW</fullName>
                </value>
                <value>
                    <fullName>CPMo</fullName>
                </value>
                <value>
                    <fullName>CPY</fullName>
                </value>
                <value>
                    <fullName>CPL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SomDig_Auftragstyp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Auftragstyp</label>
        <referenceTo>SomDig_Auftragstyp__c</referenceTo>
        <relationshipLabel>Metabuchungslogik</relationshipLabel>
        <relationshipName>Metabuchungslogik</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SomDig_BtFaehig__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BT fähig</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_CpxFaehig__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CPX fähig</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_FcFaehig__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FC fähig</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_GtFaehig__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GT fähig</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Aktiv</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_MediagattungsDifferenzierung__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mediagattungs-Differenzierung</label>
        <referenceTo>SomDig_MediagattungsDifferenzierung__c</referenceTo>
        <relationshipLabel>Metabuchungslogik</relationshipLabel>
        <relationshipName>Metabuchungslogik</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SomDig_Rotationstyp__c</fullName>
        <label>Rotationstyp</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Network-Rotation</fullName>
                </value>
                <value>
                    <fullName>Brand-Rotation</fullName>
                </value>
                <value>
                    <fullName>Site-Rotation</fullName>
                </value>
                <value>
                    <fullName>Themen-Rotation</fullName>
                </value>
                <value>
                    <fullName>TV-Brand-Rotation</fullName>
                </value>
                <value>
                    <fullName>Umfeld</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SomDig_TkpFaehig__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TKP fähig</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_WbFaehig__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WB Fähig</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_Werbeformgruppe__c</fullName>
        <label>Werbeformgruppe</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                    <label>Standard</label>
                </value>
                <value>
                    <fullName>Sonderwerbeform</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Metabuchungslogik</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Mig_ProdiaKey__c</columns>
        <columns>SomDig_IsActive__c</columns>
        <columns>SomDig_Abrechnungsart__c</columns>
        <columns>SomDig_Auftragstyp__c</columns>
        <columns>SomDig_MediagattungsDifferenzierung__c</columns>
        <columns>SomDig_Rotationstyp__c</columns>
        <columns>SomDig_Werbeformgruppe__c</columns>
        <columns>SomDig_BtFaehig__c</columns>
        <columns>SomDig_CpxFaehig__c</columns>
        <columns>SomDig_FcFaehig__c</columns>
        <columns>SomDig_GtFaehig__c</columns>
        <columns>SomDig_TkpFaehig__c</columns>
        <columns>SomDig_WbFaehig__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MBL-{0000}</displayFormat>
        <label>MBL-Nr</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Metabuchungslogik</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>